Do Client: Casino Rama

--- a/2016-10-03/source/300x600.css
+++ b/2016-10-03/source/300x600.css
@@ -164,11 +164,49 @@
   }
 }
 
+/*-- fade in down big--*/
+@-webkit-keyframes fadeInDownBig {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    -webkit-transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: translate(0,0);
+  }
+}
+@-moz-keyframes fadeInDownBig {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    -moz-transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    -moz-transform: translate(0,0);
+  }
+}
+@keyframes fadeInDownBig {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0,0);
+  }
+}
+
 
 /*-- fade in right animation--*/
 @-webkit-keyframes fadeInRight {
   0%   {
-    -webkit-transform: translate(-160px,0);
+    -webkit-transform: translate(-300px,0);
     visibility: visible;
     opacity: 0;
   }
@@ -180,7 +218,7 @@
 }
 @-moz-keyframes fadeInRight {
   0%   {
-    -moz-transform: translate(-160px,0);
+    -moz-transform: translate(-300px,0);
     visibility: visible;
     opacity: 0;
   }
@@ -192,7 +230,7 @@
 }
 @keyframes fadeInRight {
   0%   {
-    transform: translate(-160px,0);
+    transform: translate(-300px,0);
     visibility: visible;
     opacity: 0;
   }
@@ -208,6 +246,11 @@
   0%   {
     visibility: visible;
     opacity: 0;
+    -webkit-transform: scale(1,1);
+  }
+  50% {
+    visibility: visible;
+    opacity: 0.5;
     -webkit-transform: scale(1.25,1.25);
   }
   100% { 
@@ -220,6 +263,11 @@
   0%   {
     visibility: visible;
     opacity: 0;
+    -moz-transform: scale(1,1);
+  }
+  50% {
+    visibility: visible;
+    opacity: 0.5;
     -moz-transform: scale(1.25,1.25);
   }
   100% { 
@@ -232,45 +280,16 @@
   0%   {
     visibility: visible;
     opacity: 0;
+    transform: scale(1,1);
+  }
+  50% {
+    opacity: 0.5;
     transform: scale(1.25,1.25);
   }
   100% { 
     visibility: visible;
     opacity: 1;
     transform: scale(1,1);
-  }
-}
-
-
-/*-- fill color --*/
-@-webkit-keyframes fillColor {
-  0%   {
-    visibility: visible;
-    height: 0px;
-  }
-  100% { 
-    visibility: visible;
-    height: 186px;
-  }
-}
-@-moz-keyframes fillColor {
-  0%   {
-    visibility: visible;
-    height: 0px;
-  }
-  100% { 
-    visibility: visible;
-    height: 186px;
-  }
-}
-@keyframes fillColor {
-  0%   {
-    visibility: visible;
-    height: 0px;
-  }
-  100% { 
-    visibility: visible;
-    height: 186px;
   }
 }
 
@@ -291,7 +310,7 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 160px;
+  width: 300px;
   height: 600px;
   display: block;
 }
@@ -306,105 +325,251 @@
   animation: hideContent 10ms ease-in-out 0s forwards;
 }
 .content{
-  background: url('./images/160x600_mill_bg.jpg') no-repeat center center;
+  background: url('./images/300x600_bg.jpg') no-repeat center center;
   -webkit-animation: fadeIn 1s ease-in-out 1s forwards;
   -moz-animation: fadeIn 1s ease-in-out 1s forwards;
   animation: fadeIn 1s ease-in-out 1s forwards;
-
-  border: 1px solid #acacac;
 }
 
-.logo-container {
-  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
-  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
-  animation: hideContent 10ms ease-in-out 0s forwards;
-}
-.logo {
-  background: url('./images/160x600_mill_logo.png') no-repeat center center;
-  width: 130px;
-  height: 30px;
-  top: 20px;
-  left: 15px;
-
-  -webkit-animation: fadeIn 0.5s ease-in-out 2s forwards;
-  -moz-animation: fadeIn 0.5s ease-in-out 2s forwards;
-  animation: fadeIn 0.5s ease-in-out 2s forwards;
-}
-
-.header-container {
+.top-container {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
   -moz-animation: hideContent 10ms ease-in-out 0s forwards;
   animation: hideContent 10ms ease-in-out 0s forwards;
 }
 .header {
-  background: url('./images/160x600_mill_header.png') no-repeat center center;
-  width: 130px;
-  height: 46px;
-  top: 68px;
-  left: 15px;
+  background: url('./images/300x600_header.png') no-repeat center center;
+  width: 197px;
+  height: 137px;
+  left: 49px;
+  top: 54px;
 
-  -webkit-animation: fadeInZoomOut 0.5s ease-in-out 3s forwards;
-  -moz-animation: fadeInZoomOut 0.5s ease-in-out 3s forwards;
-  animation: fadeInZoomOut 0.5s ease-in-out 3s forwards;
-}
-
-.text-man-container {
-  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
-  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
-  animation: hideContent 10ms ease-in-out 0s forwards;
+  -webkit-animation: fadeInDown 0.5s ease-in-out 2.5s forwards;
+  -moz-animation: fadeInDown 0.5s ease-in-out 2.5s forwards;
+  animation: fadeInDown 0.5s ease-in-out 2.5s forwards;
 }
 .text {
-  background: url('./images/160x600_mill_text.png') no-repeat center center;
-  width: 135px;
-  height: 96px;
-  top: 198px;
-  left: 14px;
+  background: url('./images/300x600_text.png') no-repeat center center;
+  width: 200px;
+  height: 90px;
+  left: 48px;
+  bottom: 204px;
 
-  -webkit-animation: fadeInDown 0.5s ease-in-out 4s forwards;
-  -moz-animation: fadeInDown 0.5s ease-in-out 4s forwards;
-  animation: fadeInDown 0.5s ease-in-out 4s forwards;
+  -webkit-animation: fadeInDown 0.5s ease-in-out 3.5s forwards;
+  -moz-animation: fadeInDown 0.5s ease-in-out 3.5s forwards;
+  animation: fadeInDown 0.5s ease-in-out 3.5s forwards;
 }
-.man {
-  background: url('./images/160x600_mill_man_empty.png') no-repeat center center;
-  width: 90px;
-  height: 186px;
-  left: 33px;
-  bottom: 107px;
+.logo {
+  background: url('./images/300x600_logo.png') no-repeat center center;
+  width: 118px;
+  height: 55px;
+  left: 93px;
+  bottom: 109px;
 
-  -webkit-animation: fadeIn 0.5s ease-in-out 5s forwards;
-  -moz-animation: fadeIn 0.5s ease-in-out 5s forwards;
-  animation: fadeIn 0.5s ease-in-out 5s forwards;
+  -webkit-animation: fadeIn 0.5s ease-in-out 4.5s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 4.5s forwards;
+  animation: fadeIn 0.5s ease-in-out 4.5s forwards;
 }
 
-.man-full-mask {
-  width: 90px;
-  height: 0px;
-  left: 33px;
-  bottom: 107px;
+.dots-wrapper {
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  z-index: 1;
 
-  overflow: hidden;
-
-  -webkit-animation: fillColor 1s ease-in-out 6s forwards;
-  -moz-animation: fillColor 1s ease-in-out 6s forwards;
-  animation: fillColor 1s ease-in-out 6s forwards;
+  -webkit-animation: fadeInOnly 10ms ease-in-out 0s forwards;
+  -moz-animation: fadeInOnly 10ms ease-in-out 0s forwards;
+  animation: fadeInOnly 10ms ease-in-out 0s forwards;
 }
-.man-full {
-  background: url('./images/160x600_mill_man_full.png') no-repeat center center;
-  width: 90px;
-  height: 186px;
-  left: 0px;
-  bottom: 0px;
-}
-.man-full-ie {
-  background: url('./images/160x600_mill_man_full.png') no-repeat center center;
-  width: 90px;
-  height: 186px;
-  left: 33px;
-  bottom: 107px;
-
+.dots-container {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
   -moz-animation: hideContent 10ms ease-in-out 0s forwards;
   animation: hideContent 10ms ease-in-out 0s forwards;
+}
+.dot {
+  background-color: #ffffff;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  opacity: 0.75;
+}
+.dot1-1 {
+  width: 5px;
+  height: 5px;
+  top: 389px;
+  left: 55px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.4s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.4s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.4s forwards;
+}
+.dot1-2 {
+  width: 5px;
+  height: 5px;
+  top: 391px;
+  left: 44px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.5s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.5s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.5s forwards;
+}
+.dot1-3 {
+  width: 5px;
+  height: 5px;
+  top: 401px;
+  left: 34px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.6s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.6s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.6s forwards;
+}
+.dot1-4 {
+  width: 6px;
+  height: 6px;
+  top: 414px;
+  left: 27px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.7s forwards;
+}
+.dot1-5 {
+  width: 6px;
+  height: 6px;
+  top: 431px;
+  left: 30px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.8s forwards;
+}
+.dot1-6 {
+  width: 6px;
+  height: 6px;
+  top: 441px;
+  left: 44px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.9s forwards;
+}
+.dot1-7 {
+  width: 6px;
+  height: 6px;
+  top: 453px;
+  left: 54px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.0s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.0s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.0s forwards;
+}
+.dot1-8 {
+  width: 6px;
+  height: 6px;
+  top: 468px;
+  left: 58px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.1s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.1s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.1s forwards;
+}
+.dot1-9 {
+  width: 6px;
+  height: 6px;
+  top: 486px;
+  left: 54px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.2s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.2s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.2s forwards;
+}
+.dot1-10 {
+  width: 6px;
+  height: 6px;
+  top: 501px;
+  left: 43px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.3s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.3s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.3s forwards;
+}
+.dot1-11 {
+  width: 6px;
+  height: 6px;
+  top: 513px;
+  left: 33px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.4s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.4s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.4s forwards;
+}
+.dot1-12 {
+  width: 6px;
+  height: 6px;
+  top: 522px;
+  left: 24px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.5s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.5s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.5s forwards;
+}
+.dot1-13 {
+  width: 6px;
+  height: 6px;
+  top: 535px;
+  left: 19px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.6s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.6s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.6s forwards;
+}
+.dot1-14 {
+  width: 6px;
+  height: 6px;
+  top: 548px;
+  left: 22px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.7s forwards;
+}
+.dot1-15 {
+  width: 6px;
+  height: 6px;
+  top: 558px;
+  left: 30px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.8s forwards;
+}
+.dot1-16 {
+  width: 7px;
+  height: 7px;
+  top: 558px;
+  left: 43px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.9s forwards;
+}
+.dot1-17 {
+  width: 7px;
+  height: 7px;
+  top: 556px;
+  left: 54px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7s forwards;
+}
+.dot1-18 {
+  width: 9px;
+  height: 9px;
+  top: 549px;
+  left: 63px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.1s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.1s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7.1s forwards;
 }
 
 .cta-container {
@@ -413,13 +578,212 @@
   animation: hideContent 10ms ease-in-out 0s forwards;
 }
 .cta {
-  background: url('./images/160x600_mill_cta.png') no-repeat center center;
-  width: 140px;
-  height: 30px;
-  left: 10px;
-  bottom: 19px;
+  background: url('./images/300x600_cta.png') no-repeat center center;
+  width: 155px;
+  height: 12px;
+  bottom: 45px;
+  left: 80px;
 
-  -webkit-animation: fadeInRight 0.5s ease-in-out 7.5s forwards;
-  -moz-animation: fadeInRight 0.5s ease-in-out 7.5s forwards;
-  animation: fadeInRight 0.5s ease-in-out 7.5s forwards;
+  -webkit-animation: fadeInZoomOut 0.4s ease-in-out 7.2s forwards;
+  -moz-animation: fadeInZoomOut 0.4s ease-in-out 7.2s forwards;
+  animation: fadeInZoomOut 0.4s ease-in-out 7.2s forwards;
+}
+
+.dot2-1 {
+  width: 10px;
+  height: 10px;
+  top: 547px;
+  left: 236px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.6s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.6s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7.6s forwards;
+
+}
+.dot2-2 {
+  width: 8px;
+  height: 8px;
+  top: 556px;
+  left: 247px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7.7s forwards;
+}
+.dot2-3 {
+  width: 7px;
+  height: 7px;
+  top: 562px;
+  left: 258px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7.8s forwards;
+}
+.dot2-4 {
+  width: 6px;
+  height: 6px;
+  top: 567px;
+  left: 270px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7.9s forwards;
+}
+.dot2-5 {
+  width: 6px;
+  height: 6px;
+  top: 562px;
+  left: 285px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
+}
+.dot2-6 {
+  width: 6px;
+  height: 6px;
+  top: 547px;
+  left: 288px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
+}
+.dot2-7 {
+  width: 6px;
+  height: 6px;
+  top: 536px;
+  left: 280px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
+}
+.dot2-8 {
+  width: 5px;
+  height: 5px;
+  top: 530px;
+  left: 269px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
+}
+.dot2-9 {
+  width: 5px;
+  height: 5px;
+  top: 523px;
+  left: 259px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
+}
+.dot2-10 {
+  width: 6px;
+  height: 6px;
+  top: 513px;
+  left: 248px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
+}
+.dot2-11 {
+  width: 6px;
+  height: 6px;
+  top: 504px;
+  left: 239px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
+}
+.dot2-12 {
+  width: 6px;
+  height: 6px;
+  top: 491px;
+  left: 234px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
+}
+.dot2-13 {
+  width: 6px;
+  height: 6px;
+  top: 477px;
+  left: 233px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
+}
+.dot2-14 {
+  width: 6px;
+  height: 6px;
+  top: 462px;
+  left: 231px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
+}
+.dot2-15 {
+  width: 6px;
+  height: 6px;
+  top: 446px;
+  left: 237px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
+}
+.dot2-16 {
+  width: 6px;
+  height: 6px;
+  top: 438px;
+  left: 248px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
+}
+.dot2-17 {
+  width: 6px;
+  height: 6px;
+  top: 434px;
+  left: 261px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
+}
+.dot2-18 {
+  width: 6px;
+  height: 6px;
+  top: 435px;
+  left: 277px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
+}
+.dot2-19 {
+  width: 6px;
+  height: 6px;
+  top: 438px;
+  left: 290px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
+}
+
+.dots-ie {
+  background: url('./images/300x600_dots.png') no-repeat center center;
+  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+  animation: hideContent 10ms ease-in-out 0s forwards;
 }
