--- a/2016-10-03/source/300x250.css
+++ b/2016-10-03/source/300x250.css
@@ -164,6 +164,44 @@
   }
 }
 
+/*-- fade in down big--*/
+@-webkit-keyframes fadeInDownBig {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    -webkit-transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: translate(0,0);
+  }
+}
+@-moz-keyframes fadeInDownBig {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    -moz-transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    -moz-transform: translate(0,0);
+  }
+}
+@keyframes fadeInDownBig {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    transform: translate(0,-100%);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0,0);
+  }
+}
+
 
 /*-- fade in right animation--*/
 @-webkit-keyframes fadeInRight {
@@ -208,6 +246,11 @@
   0%   {
     visibility: visible;
     opacity: 0;
+    -webkit-transform: scale(1,1);
+  }
+  50% {
+    visibility: visible;
+    opacity: 0.5;
     -webkit-transform: scale(1.25,1.25);
   }
   100% { 
@@ -220,6 +263,11 @@
   0%   {
     visibility: visible;
     opacity: 0;
+    -moz-transform: scale(1,1);
+  }
+  50% {
+    visibility: visible;
+    opacity: 0.5;
     -moz-transform: scale(1.25,1.25);
   }
   100% { 
@@ -232,6 +280,10 @@
   0%   {
     visibility: visible;
     opacity: 0;
+    transform: scale(1,1);
+  }
+  50% {
+    opacity: 0.5;
     transform: scale(1.25,1.25);
   }
   100% { 
@@ -273,13 +325,17 @@
   animation: hideContent 10ms ease-in-out 0s forwards;
 }
 .content{
-  background-color: #fff;
+  background-color: #ffffff;
   -webkit-animation: fadeIn 1s ease-in-out 1s forwards;
   -moz-animation: fadeIn 1s ease-in-out 1s forwards;
   animation: fadeIn 1s ease-in-out 1s forwards;
 }
 
-.frame1-container {}
+.frame1-container {
+  -webkit-animation: fadeOut 0.5s ease-in-out 3.5s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 3.5s forwards;
+  animation: fadeOut 0.5s ease-in-out 3.5s forwards;
+}
 .frame1-bg {
   background: url('./images/300x250_frame1_bg.jpg') no-repeat center center;
 }
@@ -294,17 +350,23 @@
   height: 137px;
   top: 36px;
   left: 50px;
+
+  -webkit-animation: fadeInDown 0.5s ease-in-out 2s forwards;
+  -moz-animation: fadeInDown 0.5s ease-in-out 2s forwards;
+  animation: fadeInDown 0.5s ease-in-out 2s forwards;
 }
 
 .frame2-container {
-  /*
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
   -moz-animation: hideContent 10ms ease-in-out 0s forwards;
   animation: hideContent 10ms ease-in-out 0s forwards;
-  */
 }
 .frame2-bg {
   background: url('./images/300x250_frame2_bg.jpg') no-repeat center center;
+
+  -webkit-animation: fadeInDownBig 0.5s ease-in-out 3.75s forwards;
+  -moz-animation: fadeInDownBig 0.5s ease-in-out 3.75s forwards;
+  animation: fadeInDownBig 0.5s ease-in-out 3.75s forwards;
 }
 .frame2-text {
   background: url('./images/300x250_frame2_text.png') no-repeat center center;
@@ -312,6 +374,10 @@
   height: 69px;
   top: 7px;
   left: 64px;
+
+  -webkit-animation: fadeInDown 0.5s ease-in-out 4.5s forwards;
+  -moz-animation: fadeInDown 0.5s ease-in-out 4.5s forwards;
+  animation: fadeInDown 0.5s ease-in-out 4.5s forwards;
 }
 .frame2-logo {
   background: url('./images/300x250_frame2_logo.png') no-repeat center center;
@@ -319,6 +385,10 @@
   height: 49px;
   top: 103px;
   left: 92px;
+
+ -webkit-animation: fadeInDown 0.5s ease-in-out 4.75s forwards;
+  -moz-animation: fadeInDown 0.5s ease-in-out 4.75s forwards;
+  animation: fadeInDown 0.5s ease-in-out 4.75s forwards; 
 }
 .frame2-dots-container {
   opacity: 0;
@@ -330,126 +400,203 @@
   animation: fadeInOnly 10ms ease-in-out 0s forwards;
 }
 .dot {
-  /*background-color: #fbfbfb;*/
-  background-color: red;
+  background-color: #ffffff;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
   opacity: 0.75;
-
-  /*
-  -webkit-box-shadow: 0 0 1px 1px rgba(240,240,240,0.5);
-  -moz-box-shadow: 0 0 1px 1px rgba(240,240,240,0.5);
-  box-shadow: 0 0 1px 1px rgba(240,240,240,0.5);
-  */
 }
 .dot1-1 {
   width: 4px;
   height: 4px;
   top: 70px;
   left: 68px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.4s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.4s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.4s forwards;
 }
 .dot1-2 {
   width: 5px;
   height: 5px;
   top: 72px;
   left: 59px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.5s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.5s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.5s forwards;
 }
 .dot1-3 {
   width: 5px;
   height: 5px;
   top: 79px;
   left: 52px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.6s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.6s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.6s forwards;
 }
 .dot1-4 {
   width: 5px;
   height: 5px;
   top: 90px;
   left: 45px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.7s forwards;
 }
 .dot1-5 {
   width: 6px;
   height: 6px;
   top: 102px;
   left: 48px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.8s forwards;
 }
 .dot1-6 {
   width: 5px;
   height: 5px;
   top: 112px;
   left: 59px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 5.9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 5.9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 5.9s forwards;
 }
 .dot1-7 {
   width: 5px;
   height: 5px;
   top: 121px;
   left: 67px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.0s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.0s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.0s forwards;
 }
 .dot1-8 {
   width: 5px;
   height: 5px;
   top: 133px;
   left: 70px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.1s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.1s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.1s forwards;
 }
 .dot1-9 {
   width: 5px;
   height: 5px;
   top: 146px;
   left: 68px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.2s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.2s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.2s forwards;
 }
 .dot1-10 {
   width: 5px;
   height: 5px;
   top: 158px;
   left: 59px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.3s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.3s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.3s forwards;
 }
 .dot1-11 {
   width: 5px;
   height: 5px;
   top: 167px;
   left: 51px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.4s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.4s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.4s forwards;
 }
 .dot1-12 {
   width: 5px;
   height: 5px;
   top: 175px;
   left: 44px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.5s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.5s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.5s forwards;
 }
 .dot1-13 {
   width: 5px;
   height: 5px;
   top: 185px;
   left: 40px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.6s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.6s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.6s forwards;
 }
 .dot1-14 {
   width: 5px;
   height: 5px;
   top: 195px;
   left: 42px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.7s forwards;
 }
 .dot1-15 {
   width: 5px;
   height: 5px;
   top: 202px;
   left: 49px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.8s forwards;
 }
 .dot1-16 {
   width: 5px;
   height: 5px;
   top: 203px;
   left: 59px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 6.9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 6.9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 6.9s forwards;
 }
 .dot1-17 {
   width: 6px;
   height: 6px;
   top: 201px;
   left: 67px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7s forwards;
 }
 .dot1-18 {
   width: 7px;
   height: 7px;
   top: 196px;
   left: 74px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.1s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.1s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7.1s forwards;
+}
+
+.frame2-cta {
+  background: url('./images/300x250_frame2_cta.png') no-repeat center center;
+  width: 121px;
+  height: 9px;
+  bottom: 50px;
+  left: 88px;
+
+  -webkit-animation: fadeInZoomOut 0.4s ease-in-out 7.2s forwards;
+  -moz-animation: fadeInZoomOut 0.4s ease-in-out 7.2s forwards;
+  animation: fadeInZoomOut 0.4s ease-in-out 7.2s forwards;
 }
 
 .dot2-1 {
@@ -457,138 +604,211 @@
   height: 8px;
   top: 194px;
   left: 210px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.6s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.6s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7.6s forwards;
+
 }
 .dot2-2 {
   width: 7px;
   height: 7px;
   top: 200px;
   left: 217px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7.7s forwards;
 }
 .dot2-3 {
   width: 6px;
   height: 6px;
   top: 206px;
   left: 226px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7.8s forwards;
 }
 .dot2-4 {
   width: 5px;
   height: 5px;
   top: 209px;
   left: 235px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 7.9s forwards;
 }
 .dot2-5 {
   width: 5px;
   height: 5px;
   top: 205px;
   left: 247px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
 }
 .dot2-6 {
   width: 5px;
   height: 5px;
   top: 194px;
   left: 249px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
 }
 .dot2-7 {
   width: 6px;
   height: 6px;
   top: 185px;
   left: 243px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
 }
 .dot2-8 {
   width: 5px;
   height: 5px;
   top: 180px;
   left: 235px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
 }
 .dot2-9 {
   width: 5px;
   height: 5px;
   top: 174px;
   left: 227px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
 }
 .dot2-10 {
   width: 5px;
   height: 5px;
   top: 167px;
   left: 219px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
 }
 .dot2-11 {
   width: 5px;
   height: 5px;
   top: 160px;
   left: 211px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
 }
 .dot2-12 {
   width: 5px;
   height: 5px;
   top: 150px;
   left: 207px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
 }
 .dot2-13 {
   width: 5px;
   height: 5px;
   top: 139px;
   left: 207px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
 }
 .dot2-14 {
-  width: 6px;
-  height: 6px;
-  top: 0px;
-  left: 0px;
+  width: 5px;
+  height: 5px;
+  top: 128px;
+  left: 206px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
 }
 .dot2-15 {
-  width: 6px;
-  height: 6px;
-  top: 0px;
-  left: 0px;
+  width: 5px;
+  height: 5px;
+  top: 115px;
+  left: 210px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
 }
 .dot2-16 {
-  width: 6px;
-  height: 6px;
-  top: 0px;
-  left: 0px;
+  width: 5px;
+  height: 5px;
+  top: 109px;
+  left: 218px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
 }
 .dot2-17 {
-  width: 6px;
-  height: 6px;
-  top: 0px;
-  left: 0px;
+  width: 5px;
+  height: 5px;
+  top: 106px;
+  left: 229px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
 }
 .dot2-18 {
-  width: 6px;
-  height: 6px;
-  top: 0px;
-  left: 0px;
+  width: 5px;
+  height: 5px;
+  top: 106px;
+  left: 241px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
 }
 .dot2-19 {
-  width: 6px;
-  height: 6px;
-  top: 0px;
-  left: 0px;
+  width: 5px;
+  height: 5px;
+  top: 108px;
+  left: 251px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
 }
 .dot2-20 {
   width: 6px;
   height: 6px;
-  top: 0px;
-  left: 0px;
+  top: 116px;
+  left: 260px;
+
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.5s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.5s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.5s forwards;
 }
 
 .frame2-dots-ie {
   background: url('./images/300x250_frame2_dots.png') no-repeat center center;
 
-  /*
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
   -moz-animation: hideContent 10ms ease-in-out 0s forwards;
   animation: hideContent 10ms ease-in-out 0s forwards;
-  */
 }
-.frame2-cta {
-  background: url('./images/300x250_frame2_cta.png') no-repeat center center;
-  width: 121px;
-  height: 9px;
-  bottom: 50px;
-  left: 88px;
-}
+
 
 .legal-container {}
 .legal {
